--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,6 +18,9 @@ env:
   PIP_NO_CLEAN: "ON"
   PIP_PREFER_BINARY: "ON"
   TZ: "UTC"
+  QEMU_STATIC_VERSION: "v3.1.0-3"
+  MINIFORGE_VERSION: "4.12.0-2" # needs to be updated in matrix section too--fix this.
+  MINIFORGE_URL: "https://github.com/conda-forge/miniforge/releases/download"
 
 jobs:
   Install-taucmdr-minimal:
@@ -26,8 +29,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-18.04] #, ubuntu-20.04
-        backend: ['tinydb', 'sqlite']
+        os: [macos-latest]
+        arch: [x86_64, arm64]
         python_version: ['3.7']
     env:
       OS: ${{ matrix.os }}
@@ -38,12 +41,6 @@ jobs:
         with:
           fetch-depth: 9999
 
-      - name: Install system packages
-        run: |
-          # Ensure that we have default system compilers and MPI for testing
-          sudo apt-get update -qq || true
-          sudo apt-get install -y --no-install-recommends gcc g++ gfortran mpi-default-bin mpi-default-dev
-
       - name: System info
         id: info
         run: |
@@ -51,7 +48,6 @@ jobs:
           uname -a
           mount
           df -h
-          gcc --version
           echo "github.event_name: ${{ github.event_name }}"
           echo "github.ref:        ${{ github.ref }}"
           echo "matrix.os:         ${{ matrix.os }}"
@@ -84,109 +80,14 @@ jobs:
           restore-keys: |
             ${{ matrix.os }}-system-src
 
-      - name: Cache pylint directory
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.info.outputs.home_dir }}/.pylint.d
-          key: ${{ matrix.os }}-pylint-cache-${{ steps.info.outputs.branch }}-${{ github.sha }}
-          restore-keys: |
-            ${{ matrix.os }}-pylint-cache-${{ steps.info.outputs.baseref }}
-
-      - name: Install TAU Commander
+      - name: test
         run: |
-          make INSTALLDIR="${INSTALLDIR}" install
+          make INSTALLDIR="${INSTALLDIR}" check_python
           echo "${INSTALLDIR}/conda/bin" >> $GITHUB_PATH
           export PATH="${INSTALLDIR}/conda/bin:${PATH}"
           which python
           which pip
           python -m pip install -U pip
-          python -m pip install -U --prefix "${INSTALLDIR}/conda" -r requirements-dev.txt
           cd "${HOME}"
-          zip -vr taucmdr.zip ${INSTALLDIR##*/} -x "taucmdr/system/src/*" -x "taucmdr/conda/*"
           type -a python
           while read -r line ; do "${line##* is }" --version; done <<< $(type -a python)
-
-      - name: Upload TAU Commander install log
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: taucmdr-tau-minimal-debug-log-${{ matrix.os }}
-          path: ${{ steps.info.outputs.home_dir }}/.local/taucmdr/debug_log
-
-      # - name: Upload TAU Commander minimal install
-      #   if: always()
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: taucmdr-installation-${{ matrix.os }}
-      #     path: ${{ steps.info.outputs.home_dir }}/taucmdr.zip
-
-      - name: Test TAU Commander
-        run: |
-          rm -f ./coverage.xml || true
-          coverage run setup.py test
-          coverage xml
-
-      - name: Build sphinx docs
-        run: python setup.py build_sphinx
-
-      - name: Upload TAU Commander unit test log
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: taucmdr-unit-test-debug-log-${{ matrix.os }}
-          path: ${{ steps.info.outputs.home_dir }}/.local/taucmdr/debug_log
-
-      - name: Upload Pylint report
-        if: always() && matrix.os == 'ubuntu-18.04'
-        uses: actions/upload-artifact@v2
-        with:
-          name: taucmdr-pylint-logs-${{ matrix.os }}
-          path: pylint.md
-
-      - name: Pylint PR Comment
-        if: matrix.os == 'ubuntu-18.04'
-        uses: marocchino/sticky-pull-request-comment@v2
-        with:
-          header: pylint-comment
-          path: ./pylint.md
-          recreate: true
-
-      - name: Upload Coverage info
-        if: always()
-        uses: codecov/codecov-action@v2
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          flags: unittests,CI
-          name: codecov-${{ matrix.os }}
-          fail_ci_if_error: true # optional (default = false)
-          path_to_write_report: codecov-upload.txt
-          env_vars: OS,PY_VER,__TAUCMDR_PROGRESS_BARS__,__TAUCMDR_DB_BACKEND__,__TAUCMDR_SYSTEM_PREFIX__,GITHUB_WORKFLOW,GITHUB_RUN_ID,GITHUB_RUN_NUMBER,GITHUB_ACTOR
-
-      - name: Deploy Sphinx docs
-        uses: peaceiris/actions-gh-pages@v3
-        if: success() && github.event_name == 'push' && ( github.ref == 'refs/heads/master' || github.ref == 'refs/heads/unstable' ) && matrix.os == 'ubuntu-18.04'
-        with:
-          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          enable_jekyll: false
-          allow_empty_commit: true
-          publish_dir: ./build/sphinx/html
-          username: ${{ github.actor }}
-          commitMessage: "Documentation for commit ${{ github.sha }}"
-          keep_files: false
-
-      - name: tau_validate
-        if: always()
-        run: |
-          cd ${{ steps.info.outputs.taucmdr_system }}/tau/tau-2*
-          printf '#!/bin/bash\nmpirun -np 2 ./simple\n' > parallel.sh
-          export TAU_VALIDATE_PARALLEL="$(pwd)/parallel.sh"
-          ./tau_validate -v --html --table table.html --timeout 180 x86_64 &> results.html || true
-          mkdir "${HOME}/tau-tests-validate"
-          cp table.html results.html "${HOME}/tau-tests-validate"
-
-      - name: Upload unit tests TAU validate
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: taucmdr-full-tau-validate-${{ matrix.os }}-${{ github.sha }}
-          path: ${{ steps.info.outputs.home_dir }}/tau-tests-validate
